fix content overflow, annoying horizontal scroll bar in all pages

--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -593,6 +593,7 @@ $button-size: 1.5rem;
     clear: both;
     margin-top: 0;
     padding-left: 20px;
+    box-sizing: border-box;
     h1 {
         margin-top: 0;
     }
